[package]
name = "egui_widget_texicon"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
description = "An egui widget that combines an image and text (icon + label)"
keywords = ["egui", "eframe", "widget", "ui", "gamedev", "image", "text", "icon", "label"]
categories = ["gui", "graphics", "rendering", "widget"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/white-rabbit-scientific/egui-widget-texicon"
documentation = "https://docs.rs/egui-widget-texicon"
readme = "README.md"
homepage = "https://github.com/white-rabbit-scientific/egui-widget-texicon"

# Exclude from crate.io
exclude = [
    ".github/",
    ".gitignore",
]

[dependencies]
egui = "0.33"

[features]
default = []

[dev-dependencies]
eframe = "0.33"
